Issue #26764: Fixed SystemError in bytes.__rmod__.